# ocaml-mindstorm

./: .bzrignore  .depend.ocaml  .gitignore  .travis-ci.sh  .travis.yml  API.odocl  CHANGES.md  DeuxUnites.ml  DeuxUnitesPush.ml  LICENSE  META.in  Makefile  Makefile.UNIX  Makefile.WIN32  Makefile.latex  Makefile.ocaml  README  README.md  TestSignaux.ml  Tree.ml  _oasis  _opam  _tags  adjacency.ml  adjacency.mli  alphabeta.ml  alphabeta.mli  alphabeta2.ml  alphabetabis.ml  alphabetamem.ml  appveyor.yml  appveyor_install.cmd  board.ml  board.mli  dune-project  evaluate.ml  evaluate2.ml  game.ml  game.mli  gamebis.ml  (+61 more)
.github/workflows/: main.yml
Initialisation/: Initialisation.tex
config/: discover.ml  dune  pp.ml
doc/: add_sf_logo  index.html  intro.txt
doc/mindstorm/: index.html
doc/mindstorm-lwt/: index.html
doc/mindstorm-lwt/Mindstorm_lwt/: index.html
doc/mindstorm-lwt/Mindstorm_lwt/NXT/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__/Mindstorm_lwt__NXT/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__/Mindstorm_lwt_connect/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__Mindstorm_lwt__NXT/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__Mindstorm_lwt__NXT/Find/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__Mindstorm_lwt_connect/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__NXT/: index.html
doc/mindstorm-lwt/Mindstorm_lwt__NXT/Find/: index.html
doc/mindstorm-lwt/Mindstorm_lwt_connect/: index.html
doc/mindstorm/Mindstorm/: index.html
doc/mindstorm/Mindstorm__/: index.html
doc/mindstorm/Mindstorm__EV3/: index.html
doc/mindstorm/Mindstorm__Mindstorm__EV3/: index.html
doc/mindstorm/Mindstorm__Mindstorm__NXT/: index.html
doc/mindstorm/Mindstorm__Mindstorm_connect/: index.html
doc/mindstorm/Mindstorm__NXT/: index.html
doc/mindstorm/Mindstorm_connect/: index.html
examples/: .depend.ocaml  Makefile  jbuild  roam.ml  run_push.ml  test_speed.ml  test_threads.ml  wander.ml
lwt/: dune  jbuild
opam/: findlib  opam
src/: META  Makefile  Makefile.MACOS  Makefile.UNIX  Makefile.WIN32  dune  index.mld  jbuild  libmindstorm_stubs.clib  make_os_type.ml  mindstorm.ml  mindstorm.mld  mindstorm.mli  mindstorm.mllib  mindstorm_EV3.ml  mindstorm_EV3.mli  mindstorm_NXT.ml  mindstorm_NXT.mli  mindstorm_NXT.pp.mli  mindstorm_NXT_lwt.ml  mindstorm__EV3.ml  mindstorm__NXT.ml  mindstorm__NXT.mli.pp  mindstorm__NXT.pp.mli  mindstorm_common.ml  mindstorm_connect.ml  mindstorm_connect.mli  mindstorm_connect_lwt.ml  mindstorm_connect_lwt.mli  mindstorm_lwt.ml  mindstorm_lwt.mli  mindstorm_lwt_NXT.ml  mindstorm_lwt__NXT.ml  mindstorm_lwt_connect.ml  mindstorm_lwt_connect.mli  mindstorm_macros.ml  mindstorm_stubs.c  mindstorm_unix.c  mindstorm_win.c  unixsupport_win.h
talk/: presentation.tex  template.sty
tests/: .depend.ocaml  Makefile  connect.ml  connect.mli  connect_lwt.ml  connect_lwt.mli  disconnect.ml  ev3_connect.ml  ev3_sound.ml  file_list.ml  file_list_lwt.ml  info.ml  info_lwt.ml  jbuild  keep_alive.ml  keep_alive_lwt.ml  motor.ml  sensors.ml  sound.ml  upload.ml
tests-lwt/: jbuild
tests-lwt/common/: connect_lwt.ml  jbuild
tests/common/: jbuild
velena/: adjmtrx.c  bintree.c  buildob.c  cmdline.c  con4vals.h  connect4.c  connect4.h  database.c  debug.h  dummy.c  error.c  evaluate.c  heurist.c  heurist.h  ia_main.c  makefile  makefile.wcc  offsets.h  pbsolver.c  playgame.c  pnsearch.c  pnsearch.h  proto.h  readme  rules.h  veleng  wc.c  white_ob.cn4
web/: doc.html  download.html  index.html  license.html  style.css  users.html
(+77 files in other folders)
