opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler"
           "Julie De Pril"
           "Marc Ducobu"
           "Dany Maslowski" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-mindstorm"
dev-repo: "https://github.com/Chris00/ocaml-mindstorm.git"
bug-reports: "https://github.com/Chris00/ocaml-mindstorm/issues"
doc: "https://Chris00.github.io/ocaml-mindstorm/doc"
tags: [ "lego" "robotics" "mindstorms"
        "clib:usb" "clib:bluetooth"  ]
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "stdio" {build}
  "cppo" {build}
  "base-bytes"
  "base-unix"
]
available: [ ocaml-version >= "3.12" ]
depexts: [
  [ [ "debian"  ] [ "libbluetooth-dev" ] ]
  [ [ "ubuntu"  ] [ "libbluetooth-dev" ] ]
]
