opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler"
           "Julie De Pril"
           "Marc Ducobu"
           "Dany Maslowski" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-mindstorm"
dev-repo: "git+https://github.com/Chris00/ocaml-mindstorm.git"
bug-reports: "https://github.com/Chris00/ocaml-mindstorm/issues"
doc: "https://Chris00.github.io/ocaml-mindstorm/doc"
tags: [ "lego" "robotics" "mindstorms"
        "clib:usb" "clib:bluetooth" ]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.1"}
  "jbuilder" {build}
  "configurator" {build}
  "stdio" {build}
  "base" {build}
  "cppo" {build}
  "base-bytes"
  "base-unix"
]
depexts: [
  ["libbluetooth-dev"] {os-distribution = "debian"}
  ["libbluetooth-dev"] {os-distribution = "ubuntu"}
  ["bluez-libs-devel"] {os-distribution = "centos"}
  ["bluez-libs-devel"] {os-distribution = "fedora"}
  ["bluez-libs-devel"] {os-distribution = "mageia"}
  ["libbluetooth3"] {os-distribution = "opensuse"}
  ["bluez-dev"] {os-distribution = "alpine"}
]
synopsis: "Drive Lego Mindstorms bricks from OCaml"
description: """
This library allows you to communicate with your Lego Mindstorms brick
via bluetooth, enable the motors and retrieve data from various
sensors.
"""
